--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,12 +8,20 @@
   }
 
   header {
-    @apply fixed top-0 z-50 flex w-full justify-between items-center px-4 transition-all lg:px-10;
+    @apply fixed z-50 top-0  flex w-full justify-between items-center px-4 transition-all lg:px-10;
   }
 }
 
 @layer components {
   .headerItem {
     @apply cursor-pointer text-sm font-bold text-[#9f9584] transition duration-500 ease-in-out hover:text-[#726c5f];
+  }
+
+  .bannerBtn {
+    @apply cursor-pointer flex items-center gap-x-2 rounded w-32 md:w-auto bg-[#726c5f] px-5 py-1.5 text-sm font-semibold text-[#2e2c28] transition hover:opacity-75 md:py-2.5 md:px-8 md:text-xl;
+  }
+
+  .bannerIcon {
+    @apply h-4 w-4 text-[#112d32] md:h-7 md:w-7;
   }
 }
