--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,4 +28,8 @@
   .rowIcon {
     @apply absolute top-0 bottom-0 z-40 m-auto h-9 w-9 cursor-pointer opacity-0 transition hover:scale-125 group-hover:opacity-100;
   }
+
+  .loginInput {
+    @apply w-full rounded bg-[#eee5d6] px-5 py-3.5 text-[#112d32] placeholder-[#2a6371] outline-none focus:bg-[#ccc4b5];
+  }
 }
